objects/S3_Reference__c.object
<CustomObject>
    <description>This links a S3 URL with an External Guid (that is generated in Salesforce)</description>
    <fields>
        <fullName>External_Record_Guid__c</fullName>
        <description>This is an external id to link to the MySQL database generated in Salesforce</description>
        <externalId>true</externalId>
        <label>External Record Guid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>S3_URL__c</fullName>
        <description>URL to the S3 file</description>
        <label>S3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of file the S3 file is</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Lane - Branding</fullName>
                </value>
                <value>
                    <fullName>Private Lane - Eula</fullName>
                </value>
                <value>
                    <fullName>Account Image</fullName>
                </value>
                <value>
                    <fullName>EULA</fullName>
                    <isActive>false</isActive>
                    <label>EULA</label>
                </value>
                <value>
                    <fullName>Logo</fullName>
                    <isActive>false</isActive>
                    <label>Logo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>S3 Reference</label>
    <nameField>
        <label>S3 Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3 References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>